--- a/src/body.css
+++ b/src/body.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  src: url(https://fonts.googleapis.com/css2?family=Montserrat&display=swap);
+}
 .app-container {
     display: flex;
     width: 100vw;
