--- a/src/body.css
+++ b/src/body.css
@@ -46,3 +46,14 @@
     
     
   }
+
+
+  .quiz-box {
+    border: 1px solid #000;
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  
