--- a/src/body.css
+++ b/src/body.css
@@ -13,7 +13,7 @@
   
   .app-sidebar {
     flex-basis: 20%;
-    height: 80%;
+    height: 100%;
     padding: 20px 0;
     background-color: rgba(179, 255, 0, 0.80);
     display: flex;
@@ -21,6 +21,7 @@
     align-items: center;
     gap: 10px;
     border-radius: 110px;
+    margin-top:80px;
   }
   
   .user-box {
@@ -35,20 +36,98 @@
   
   .app-main {
     flex-grow: 1;
-    padding: 30px;
+    padding: 4%;
     background-color: rgba(255, 207, 0, 0.73);
     border-radius: 110px;
     width: 200px;
-    height: 80%;
+    height: 100%;
+    margin-top: 80px;
   }
   
   .welcome-box{
-    
-    
+    width: 100%;
+    height: 30%;
+    background: rgba(255, 228, 112, 1);
+    border-radius: 48px;
+
   }
 
+  .welcome-box-text {
+    width: 340;
+    height: 32;
+    text-align: center;
+    color: black;
+    font-size: 30;
+    font-weight: 400;
+    word-wrap:break-word;
+  }
+  .welcome-box-letras {
+    align-items: center;
+    padding: 0 120px
+  }
+  .welcome-box-s {
+    width: 72;
+    height: 80;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    padding: 0 50px 0 50px;
+  }
+  .welcome-box-t {
+    width: 72;
+    height: 80;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    padding: 0 50px 0 50px;
+  }
+  .welcome-box-e {
+    width: 72;
+    height: 80;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    padding: 0 50px 0 50px;
+  }
+  .welcome-box-m {
+    width: 72;
+    height: 80;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    padding: 0 50px 0 50px;
+  }
+.news-activities{
+  margin-top:20px;
+  width: 50%; 
+  height: 70%;
+  background: #FFE470;
+  border-radius: 73px; 
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+}
+.news-activities-text{
+padding-top: 20px;
+width: 100%;
+height: 100%;
+text-align: center;
+color: black;
+font-size: 24;
+font-weight: 400; 
+word-wrap: break-word;
+}
 
-  .quiz-box {
+.mujeres-stem {
+width: 100%; 
+height: 100%; 
+border-radius: 113px;
+}
+.quiz-box {
     border: 1px solid #000;
     padding: 20px;
     margin: 20px;
