--- a/src/body.css
+++ b/src/body.css
@@ -33,6 +33,13 @@
     align-items: center;
     border-radius: 50%;
   }
+  .user-box-text{
+    text-align: center;
+    color: black;
+    font-size: 30; 
+    font-weight: 400;
+    word-wrap: break-word;
+  }
   
   .app-main {
     flex-grow: 1;
@@ -103,13 +110,10 @@
   }
 .news-activities{
   margin-top:20px;
-  width: 50%; 
-  height: 70%;
+  width: 200%; 
+  height: 110%;
   background: #FFE470;
   border-radius: 73px; 
-  display: flex;
-  justify-content: space-between; 
-  align-items: center;
 }
 .news-activities-text{
 padding-top: 20px;
@@ -122,10 +126,12 @@ font-weight: 400;
 word-wrap: break-word;
 }
 
-.mujeres-stem {
-width: 100%; 
-height: 100%; 
+.img-mujeres-stem{
+padding-top: 20px;
+height: 90%;
+width: 90%;
 border-radius: 113px;
+
 }
 .quiz-box {
     border: 1px solid #000;
