--- a/src/body.css
+++ b/src/body.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(238, 219, 252, 0.53);
+    
   }
   
   .menu-button {
@@ -13,7 +14,7 @@
   
   .app-sidebar {
     flex-basis: 20%;
-    height: 100%;
+    height: 85%;
     padding: 20px 0;
     background-color: rgba(179, 255, 0, 0.80);
     display: flex;
@@ -22,6 +23,7 @@
     gap: 10px;
     border-radius: 110px;
     margin-top:80px;
+    margin-left: 10px;
   }
   
   .user-box {
@@ -43,83 +45,37 @@
   
   .app-main {
     flex-grow: 1;
+    margin-left: 20px;
     padding: 4%;
     background-color: rgba(255, 207, 0, 0.73);
     border-radius: 110px;
-    width: 200px;
-    height: 100%;
+    max-width: 970px;
+    height: 85%;
     margin-top: 80px;
   }
   
-  .welcome-box{
-    width: 100%;
-    height: 30%;
-    background: rgba(255, 228, 112, 1);
+  .header-box{
+    
     border-radius: 48px;
 
   }
 
   .welcome-box-text {
-    width: 340;
-    height: 32;
     text-align: center;
     color: black;
     font-size: 30;
     font-weight: 400;
     word-wrap:break-word;
   }
-  .welcome-box-letras {
-    align-items: center;
-    padding: 0 120px
-  }
-  .welcome-box-s {
-    width: 72;
-    height: 80;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    display: inline-flex;
-    padding: 0 50px 0 50px;
-  }
-  .welcome-box-t {
-    width: 72;
-    height: 80;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    display: inline-flex;
-    padding: 0 50px 0 50px;
-  }
-  .welcome-box-e {
-    width: 72;
-    height: 80;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    display: inline-flex;
-    padding: 0 50px 0 50px;
-  }
-  .welcome-box-m {
-    width: 72;
-    height: 80;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    display: inline-flex;
-    padding: 0 50px 0 50px;
-  }
+
 .news-activities{
   margin-top:20px;
-  width: 200%; 
-  height: 110%;
-  background: #FFE470;
+  width: 100%; 
+  height: 100%;
   border-radius: 73px; 
 }
 .news-activities-text{
 padding-top: 20px;
-width: 100%;
-height: 100%;
-text-align: center;
 color: black;
 font-size: 24;
 font-weight: 400; 
@@ -128,8 +84,8 @@ word-wrap: break-word;
 
 .img-mujeres-stem{
 padding-top: 20px;
-height: 90%;
-width: 90%;
+height: 50%;
+width: 60%;
 border-radius: 113px;
 
 }
@@ -140,5 +96,7 @@ border-radius: 113px;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
+
+
 
   
