--- a/src/pCursos.css
+++ b/src/pCursos.css
@@ -1,7 +1,7 @@
 .app-container {
-
-  width: 100%;
-  height: 100%;
+position: relative;  
+  width: auto;
+  height: auto;
   background-color: rgba(238, 219, 252, 0.53);
 
 }
