--- a/src/components/RecursosExternos/recurso.css
+++ b/src/components/RecursosExternos/recurso.css
@@ -42,14 +42,13 @@
     font-weight: 400;
     word-wrap: break-word;
 }
+
 .app-main {
-    flex-grow: 1;
+
     margin-left: 20px;
-    padding: 4%;
-    background-color: rgba(255, 207, 0, 0.73);
-    border-radius: 110px;
-    max-width: 970px;
-    height: 85%;
+    padding: 8px;
+    background-color: rgba(255, 207, 0);
+    border-radius: 80px;
     margin-top: 80px;
 }
 
