--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(238, 219, 252, 0.53);
 }
 
 code {
