--- a/src/pCursos.css
+++ b/src/pCursos.css
@@ -2,7 +2,6 @@
 position: relative;  
   width: 100%;
   height: 100vh;
-  background-color: rgba(238, 219, 252, 0.53);
 
 }
 ul>li{
@@ -22,7 +21,7 @@ ul>li{
   align-items: center;
   gap: 10px;
   border-radius: 70px;
-  margin-top: 80px;
+  margin-top: 70px;
   margin-left: 20px;
   padding: 25px;
 }
@@ -51,14 +50,14 @@ ul>li{
   padding: 8px;
   background-color: rgba(255, 207, 0);
   border-radius: 80px;
-  margin-top: 80px;
+  margin-top: 70px;
 }
 
 .header-box {
 
   border-radius: 48px;
   background-color: rgba(255, 228, 112);
- 
+ margin-top: 20px;
   
 
 }
@@ -109,11 +108,16 @@ ul>li{
 
 }
 .foto-perfil{
-  max-width: 100%;
-  max-height: 60%;
-  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
 }
-
+.userText{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+  
 
 .quiz-box {
   border: 1px solid #000;
@@ -126,9 +130,8 @@ ul>li{
 /*tamaño iconos en plataforma cursos QUIZ-RECURSO-ISIGNIA-FORO-AJUSTES*/
 .icons-btn {
 
-  padding-top: 5px;
-  max-height: 50%;
-  max-width: 50%;
+  height: 100%;
+  width: 100%;
   
 }
 
