--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
   background-color: #f8f0ff;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
+  src: url(https://fonts.googleapis.com/css2?family=Montserrat&display=swap);
 }
+
+
 .navbar{
   background: rgb(145,22,144);
   background: linear-gradient(90deg, rgba(145,22,144,1) 54%, rgba(196,0,255,1) 100%, rgba(79,0,78,0.821187850140056) 100%);
@@ -46,6 +46,7 @@ body {
 }
 
 .carousel-item {
+  height: 100vh;
   background-size: cover;
 }
 
@@ -88,3 +89,6 @@ body {
   background-color: rgba(196,0,255,1) /* Cambia esto al color que desees para el hover */
 }
 
+.cardStemInfo {
+  max-width: 540px;
+}
