--- a/src/components/RecursosExternos/recurso.css
+++ b/src/components/RecursosExternos/recurso.css
@@ -75,11 +75,15 @@
     align-items: center;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
     background-color: rgba(238, 219, 252);
-    border: 2px solid rgb(240, 240, 240);
+    border: 2px solid rgb(220, 181, 248);
     border-radius: 12px;
     position:  absolute;
-    width: 50%;
+    width: 45%;
     top: 70px;
     left: calc(50% - 125px);
     bottom: 70px;
+
 }
+.card-text {
+    font-size: 0.8em;
+  }
