--- a/src/components/Matematicas/MatematicasCSS.css
+++ b/src/components/Matematicas/MatematicasCSS.css
@@ -11,3 +11,12 @@
 .border {
     border-radius: 10px;
 }
+
+.btn-intromath:hover {
+    background-color: #FFF37A;
+    color: #911690;
+}
+.btn-intromath {
+    background-color: #911690;
+    color: #FFF37A;
+}
