Ciencias y tecnologia iconos

--- a/src/Styles/ciencias.css
+++ b/src/Styles/ciencias.css
@@ -67,3 +67,15 @@
   .button:hover span {
     transform: translateX(7px);
   }
+
+.imgZoom {
+    transition: transform 0.2s ease;
+}
+
+.imgZoom:hover {
+    transform: scale(1.1);
+  }
+
+.courses-btn {
+    height: 70%;
+}
