--- a/src/Styles/tecnologia.css
+++ b/src/Styles/tecnologia.css
@@ -13,3 +13,15 @@
     word-wrap: break-word;
     
 }
+
+.imgZoom {
+    transition: transform 0.2s ease;
+}
+
+.imgZoom:hover {
+    transform: scale(1.1);
+  }
+
+.courses-btn {
+    height: 70%;
+}
