--- a/src/Styles/tecnologia.css
+++ b/src/Styles/tecnologia.css
@@ -1,5 +1,5 @@
 .welcome-box{
-    background-color: rgba(255, 238, 164);
+
     border-radius: 15px;
     position: relative;
     top: 10px;
@@ -20,8 +20,24 @@
 
 .imgZoom:hover {
     transform: scale(1.1);
-  }
+}
 
 .courses-btn {
     height: 70%;
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+    background-color:rgba(255, 238, 164);
+    border: 2px solid rgb(211, 173, 5);
+    border-radius: 12px;
+    position:  absolute;
+    width: 40%;
+    height: 70%;
+    top: 100px;
+    left: calc(50% - 125px);
+    bottom: 70px;
 }
