--- a/src/Styles/recurso.css
+++ b/src/Styles/recurso.css
@@ -140,7 +140,7 @@
 }
  /*Carta Recursos */
 
-.card {
+.card1 {
     position: relative;
     width: 300px;
     height: 200px;
@@ -151,20 +151,20 @@
     justify-content: center;
     overflow: hidden;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .card svg {
+}
+
+.card1 svg {
     width: 48px;
     fill: #333;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  }
+}
   
-  .card:hover {
+.card1:hover {
     transform: rotate(-5deg) scale(1.1);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
+}
   
-  .card__content {
+.card__content1 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -178,26 +178,26 @@
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
-  .card:hover .card__content {
+  .card1:hover .card__content1 {
     transform: translate(-50%, -50%) rotate(0deg);
     opacity: 1;
-  }
+}
   
-  .card__title {
+.card__title1 {
     margin: 0;
     font-size: 24px;
     color: #333;
     font-weight: 700;
   }
   
-  .card__description {
+  .card__description1 {
     margin: 10px 0 0;
     font-size: 14px;
     color: #777;
     line-height: 1.4;
   }
   
-  .card:hover svg {
+  .card1:hover svg {
     scale: 0;
     transform: rotate(-45deg);
   }
