--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -298,7 +298,18 @@ button.learn-more:active::before {
   transform: translate3d(0, 0, -1em);
 }
 
-
+.talkingPetText {
+  color: rgb(255, 255, 255);
+  font-size: 40;
+  font-weight: 400;
+  word-wrap: break-word;
+  background-color: rgb(245, 194, 252);
+  border-radius: 15px;
+  width: 80%;
+  position: relative;
+  top: 10px;
+  left: 10%;
+} 
 
 
 
