--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -68,20 +68,14 @@ ul>li{
 
 }
 .welcome-box{
-
-  border-radius: 15px;
-  position: relative;
-  top: 10px;
-  left: 5%;
-}
-.welcome-box-text {
-  text-align: center;
   color: black;
-  font-size: 30;
-  font-weight: 400;
+  font-size: 100%;
+  font-weight: 600;
   word-wrap: break-word;
+  margin-top: 15px;
   
 }
+
 
 .news-activities {
   margin-top: 10px;
@@ -174,7 +168,7 @@ ul>li{
 
 /*botones plataforma cursos S-T-E-M*/
 .icons-stem{
-  background-color: rgba(255, 228, 112);
+  
   width: 100%;
   
 }
