--- a/src/Styles/ciencias.css
+++ b/src/Styles/ciencias.css
@@ -163,3 +163,36 @@
 .button1:hover::before {
   opacity: 1;
 }
+
+
+.game-button {
+  background-color: #C979FF;
+  color: #FFF;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  box-shadow: 2px 2px 10px #570091;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.play-icon {
+  width: 24px;
+  height: 24px;
+  fill: #FFF;
+  margin-right: 10px;
+}
+
+.game-button:hover {
+  background-color: #9E0FFF;
+  color: #FFF;
+  box-shadow: 2px 2px 20px #2f3640;
+  transform: translateY(-2px);
+}
