--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,14 @@ body {
 .btnStem:hover {
   background-color: rgba(196,0,255,1) /* Cambia esto al color que desees para el hover */
 }
+
+/* CSS adicional para centrar los botones en la tarjeta */
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Esto asegurará que el botón se pegue al fondo de la tarjeta */
+}
+
+.btnStem {
+  margin-top: auto; /* Esto empujará el botón hacia abajo si hay espacio disponible */
+}
