--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -123,6 +123,14 @@ ul>li{
   justify-content: center;
   align-items: center;
 }
+.perfilFontM{
+  font-style: italic;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+}
 .sidebar {
   display: flex;
   justify-content: center;
@@ -330,3 +338,56 @@ button.learn-more:active::before {
   border-style: solid;
   border-color: #ffcccb transparent transparent transparent;
 }
+
+/* Estilos para los botones pagina mujeres */
+.btnM {
+  color: #B500FF;
+  padding: 13px 20px;
+  border: 2px solid #B500FF;
+  font-size: 17px;
+  transition: 0.3s;
+  border-radius: 10px;
+  font-family: Arial;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width:50%;
+  background-color: #f7f4e6;
+ }
+ 
+ .btnM:hover {
+  transition: 0.3s;
+  background-color: #B500FF;
+  margin-top: -20px;
+  color: #FFF;
+  animation-name: button_animation;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+ }
+ 
+ .btnM:active {
+  transform: scale(0.97);
+ }
+ 
+ @keyframes button_animation {
+  0% {
+   background-color: #B500FF;
+  }
+ 
+  25% {
+   background-color: #3c0154;
+  }
+ 
+  50% {
+   background-color: #B500FF;
+  }
+ 
+  75% {
+   background-color: #3c0154;
+  }
+ 
+  100% {
+   background-color: #B500FF;
+  }
+ }
