--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,55 @@ body {
 .btnStem:hover {
   background-color: rgba(196,0,255,1) /* Cambia esto al color que desees para el hover */
 }
+
+
+
+
+
+
+.card-about {
+  padding: 20px;
+  width: 330px;
+  min-height: 370px;
+  border-radius: 20px;
+  background: #ededed;
+  box-shadow: 5px 5px 6px #dadada,
+               -5px -5px 6px #f6f6f6;
+  transition: 0.4s;
+}
+
+.card-about:hover {
+  translate: 0 -10px;
+}
+
+.card-title-about {
+  font-size: 18px;
+  font-weight: 600;
+  color: #2e54a7;
+  margin: 15px 0 0 10px;
+}
+
+.card-image-about {
+  min-height: 170px;
+  background-color: #c9c9c9;
+  border-radius: 15px;
+  box-shadow: inset 8px 8px 10px #c3c3c3,
+            inset -8px -8px 10px #cfcfcf;
+}
+
+.card-body-about {
+  margin: 13px 0 0 10px;
+  color: rgb(31, 31, 31);
+  font-size: 15px;
+}
+
+.footer-about {
+  float: right;
+  margin: 28px 0 0 18px;
+  font-size: 13px;
+  color: #636363;
+}
+
+.by-name-about {
+  font-weight: 700;
+}
