--- a/src/Styles/recurso.css
+++ b/src/Styles/recurso.css
@@ -88,6 +88,19 @@
     perspective: 1000px;
     font-family: sans-serif;
 }
+
+.flip-card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+    .flip-card {
+        width: 150px;
+        height: 200px;
+    }
+}
   
 .title {
     font-size: 1.5em;
