--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,15 @@ body {
 }
 
 
+.footer {
+  background-color: #740A74;
+  color: white;
+}
 
+.png-footer {
+  max-width: 20%;
+  filter: invert(100%) grayscale(100%) brightness(200%);
+}
 
 
 
