--- a/src/Styles/AvatarModal.css
+++ b/src/Styles/AvatarModal.css
@@ -75,10 +75,10 @@
 
   .foto-perfil{
     background-color: rgb(190, 95, 235);
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     border-radius: 56%;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     object-fit: cover;
     object-position: center center;
     border : 0.05px solid black;
