--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -399,6 +399,8 @@ button.learn-more:active::before {
   text-align: center;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   z-index: 100;
+  cursor: pointer;
+  user-select: none;
 }
 
 
@@ -421,4 +423,12 @@ button.learn-more:active::before {
     height: auto;
     border-radius: 8px; /* Otra estilización que desees aplicar */
   }
+}
+
+.ClickContinuar {
+  text-align: right;
+  font-size: 0.75em; /* Ajusta el tamaño del texto según sea necesario */
+  opacity: 0.5;
+  cursor: pointer; /* Cambia el cursor a una mano al pasar sobre el contenedor */
+  user-select: none;
 }
