--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -72,10 +72,11 @@ ul>li{
 }
 .welcome-box{
   color: black;
-  font-size: 100%;
+  font-size: 1rem;
   font-weight: 600;
   word-wrap: break-word;
   margin-top: 15px;
+  padding: 15px
   
 }
 
