--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -3,9 +3,8 @@
 
 
 .app-container {
-position: relative;  
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(238, 219, 252, 0.53);
 
 }
@@ -36,8 +35,8 @@ ul>li{
 }
 
 .user-box{
-  width: 150px;
-  height: 150px;
+  width: 50%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
