--- a/src/Styles/Mujeres.css
+++ b/src/Styles/Mujeres.css
@@ -95,7 +95,7 @@
   .cover:hover .cover-overlay {
     opacity: 1; 
   }
-  .btn-group-horizontal {
+  .btn-group-horizontal1 {
   margin-top: 20px;
   display: flex;
   justify-content: center;
