--- a/src/Styles/ciencias.css
+++ b/src/Styles/ciencias.css
@@ -1,11 +1,3 @@
-.welcome-box{
-  color: black;
-  font-size: 100%;
-  font-weight: 600;
-  word-wrap: break-word;
-  margin-top: 15px;
-  
-}
 
 .perfilFont{
   font-style: italic;
@@ -129,6 +121,7 @@
   box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
   animation: glowing-pulse 2s infinite;
   transition: color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
+  margin-bottom: 10%;
 }
 
 .button1::before {
