--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -78,28 +78,8 @@ ul>li{
 }
 
 
-.news-activities {
-  margin-top: 10px;
-  width: 100%;
-  height: 100%;
-  border-radius: 73px;
-  background-color: rgba(255, 228, 112);
-}
 
-.news-activities-text {
-  
-  color: black;
-  font-size: 16;
-  font-weight: 400;
-  word-wrap: break-word;
-  background-color: rgba(255, 238, 164);
-  border-radius: 15px;
-  width: 80%;
-  position: relative;
-  top: 10px;
-  left: 10%;
 
-}
 
 .img-mujeres-stem {
   padding-top: 20px;
@@ -351,5 +331,17 @@ ul>li{
 
 .insideBox {
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 4%;
+  max-height: 50%;
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.contentPet {
+  max-width: 100%;
+  max-height: 100%;
+
 }
