--- a/src/Styles/ciencias.css
+++ b/src/Styles/ciencias.css
@@ -121,7 +121,13 @@
   box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
   animation: glowing-pulse 2s infinite;
   transition: color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
+}
+@media(max-width: 768px){
+  .button1{
+    margin-top: 30%;
+    margin-bottom:none;
+  }
 }
 
 .button1::before {
