--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -316,8 +316,8 @@ ul>li{
   z-index: 100;
   cursor: pointer;
   user-select: none;
-  max-height: 100%;
   max-width: 100%;
+  max-height: 80vh;
 }
 
 
