--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -354,6 +354,7 @@ ul>li{
 .insideBox {
   margin-top: 10px;
   margin-left: 4%;
+  margin-right: 4%;
   max-height: 100%;
   max-width: 100%;
   display: flex;
