--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -82,9 +82,9 @@ ul>li{
 
 
 .img-mujeres-stem {
-  padding-top: 20px;
-  height: 25%;
-  width: 25%;
+  padding: 20px;
+  height: 30%;
+  width: 30%;
   border-radius: 113px;
 
 }
