--- a/src/Styles/ciencias.css
+++ b/src/Styles/ciencias.css
@@ -204,7 +204,7 @@ padding: 5%;
 box-sizing: border-box;
 }
 canvas.react-pdf__Page__canvas{
-  margin-bottom:30px;
+  margin-bottom:10px;
 }
 .modalpdf{
   overflow: hidden;
@@ -227,8 +227,15 @@ canvas.react-pdf__Page__canvas{
 }
 @media only screen and (max-width: 768px) {
   .modalpdf {
-    width: 70%; 
+    width: 95vw; 
     height: 70%;
     top:140%;
+    left: 55%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .pdf-div {
+    width: 100%;
+    height: 100%;
   }
 }
