Botones cursos arreglados

--- a/src/Styles/btn-back.css
+++ b/src/Styles/btn-back.css
@@ -8,3 +8,10 @@
         color: #fff;
     }
 }
+
+@media (max-width: 768px){
+    .btn-back{
+        width: 30%;
+        margin-right: 5%;
+    }
+}
