--- a/src/Styles/pCursos.css
+++ b/src/Styles/pCursos.css
@@ -3,7 +3,6 @@
 .app-container {
   width: 100%;
   height: 100vh;
- 
   margin:0
 }
 ul>li{
@@ -305,18 +304,17 @@ ul>li{
 
 .talkingPetText {
   color: rgb(0, 0, 0);
-  font-size: 30px; /* Ajusta el tamaño del texto según sea necesario */
+  font-size: 20px; /* Ajusta el tamaño del texto según sea necesario */
   font-weight: 400;
   word-wrap: break-word;
   border-radius: 15px;
   width: 50%;
-  background-color: #ffcccb;
   text-align: center;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   z-index: 100;
   cursor: pointer;
   user-select: none;
-  max-width: 100%;
+  max-width: 100vh;
   max-height: 80vh;
 }
 
@@ -324,7 +322,7 @@ ul>li{
 .Pet-Talk {
   width: 20%;
   position: absolute;
-  top: 50%; /* Ajustar para que esté a la misma altura que el texto */
+  top: 50%;
   left: 85%;
   transform: translateX(-35%);
 }
@@ -333,20 +331,20 @@ ul>li{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; /* Ajustar según sea necesario */
+  height: 60vh; 
 
   .carousel-image {
     max-width: 100%;
     height: auto;
-    border-radius: 8px; /* Otra estilización que desees aplicar */
+    border-radius: 8px; 
   }
 }
 
 .ClickContinuar {
   text-align: right;
-  font-size: 0.75em; /* Ajusta el tamaño del texto según sea necesario */
+  font-size: 0.75em; 
   opacity: 0.5;
-  cursor: pointer; /* Cambia el cursor a una mano al pasar sobre el contenedor */
+  cursor: pointer;
   user-select: none;
 
 }
